--- a/frontend/assets/css/custom.css
+++ b/frontend/assets/css/custom.css
@@ -1,7 +1,3 @@
-/**
- * All your custom CSS should go into this file
- */
-
 body {
    padding-top: 15px;
 }
@@ -22,4 +18,22 @@ body {
   background-image: url(../img/activating.jpg);
   background-repeat: no-repeat;
   height: 41px;
+}
+
+/*Menu*/
+
+.navbar .nav {
+    width: 90%;
+}    
+
+.logOut{
+  position:absolute; 
+  right: 0px;
+}  
+
+/*List*/
+
+.list_header {
+  
+  background-color:#F9F9F9;
 }
