--- a/frontend/assets/css/custom.css
+++ b/frontend/assets/css/custom.css
@@ -2,28 +2,51 @@ body {
    padding-top: 15px;
 }
 
-#file_upload{
+/*#file_upload{
    background: url("/frontend/assets/img/upload.png") no-repeat scroll 0 0 transparent;
    color: transparent;
     height: 50px !important;
     margin-left: 1px;
     position: relative;
     width: 127px !important;
+}*/
+
+a.tooltip2{
+  font-size: 32px;
+}
+a.tooltip2:hover{
+  color:transparent;
 }
 
-.inactive {
+#file_upload{
+   background: none repeat scroll 0 0 #006DCC;
+    border-radius: 7px 7px 7px 7px;
+    color: white;
+    height: 30px;
+    padding-left: 19px;
+    width: 120px;
+}
+
+.btn-large.op {
+    border-radius: 6px 6px 6px 6px;
+    font-size: 15.5px;
+    margin-bottom: 10px;
+    padding: 6px 9px;
+}
+
+.inactive, .FAILURE {
   background-image: url(../img/inactive.png);
   background-repeat: no-repeat;
   height: 41px;
 }
 
-.active {
+.active, .READY {
   background-image: url(../img/active.jpg);
   background-repeat: no-repeat;
   height: 41px;
 }
 
-.activating {
+.activating, .RESTORING {
   background-image: url(../img/activating.jpg);
   background-repeat: no-repeat;
   height: 41px;
@@ -42,7 +65,74 @@ body {
 
 /*List*/
 
-.list_header {
-  
-  background-color:#F9F9F9;
+.list_header { background-color:#F9F9F9; }
+
+/*Movie description box*/
+
+.container {width: 960px; margin: 0 auto; overflow: hidden;}
+
+#content {	float: left; width: 100%;}
+
+#mask {
+	display: none;
+	background: #000; 
+	position: fixed; left: 0; top: 0; 
+	z-index: 10;
+	width: 100%; height: 100%;
+	opacity: 0.8;
+	z-index: 999;
 }
+
+.login-popup{
+	display:none;
+	background: #333;
+	padding: 10px; 	
+	border: 2px solid #ddd;
+	float: left;
+	font-size: 1.2em;
+	position: fixed;
+	top: 50%; left: 50%;
+	z-index: 99999;
+	box-shadow: 0px 0px 20px #999;
+	-moz-box-shadow: 0px 0px 20px #999; /* Firefox */
+    -webkit-box-shadow: 0px 0px 20px #999; /* Safari, Chrome */
+	border-radius:3px 3px 3px 3px;
+    -moz-border-radius: 3px; /* Firefox */
+    -webkit-border-radius: 3px; /* Safari, Chrome */
+}
+
+img.btn_close {
+	float: right; margin: -28px -28px 0 0; max-width: 32px !important;
+}
+
+.close { opacity: 1; }
+
+.tooltip{
+   position: absolute;
+   background: #c0df71;
+   color: #fff;
+   border-radius:10px;
+	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
+	padding: 10px;
+	margin-top: -10px;
+	margin-left: 10px;
+   z-index: 3;
+   display: none;
+	background-color: #ff934f;
+}
+
+.tooltip-seg{
+   position: absolute;
+   background: #c0df71;
+   color: #fff;
+   border-radius:10px;
+	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
+	padding: 10px;
+	margin-top: -10px;
+	margin-left: 30px;
+   z-index: 3;
+   display: none;
+	background-color: #ff934f;
+}
+
+/* End movie description */
