Cambio el cursor en la busqueda de pelicula. Elimino archivos no utilizados

--- a/frontend/assets/css/custom.css
+++ b/frontend/assets/css/custom.css
@@ -67,6 +67,10 @@ a.tooltip2:hover{
 
 .list_header { background-color:#F9F9F9; }
 
+.list_row {
+  cursor: pointer;
+}
+
 /*Movie description box*/
 
 .container {width: 960px; margin: 0 auto; overflow: hidden;}
